establishing some patterns

--- a/_dev/styles/master.scss
+++ b/_dev/styles/master.scss
@@ -16,5 +16,5 @@
 @import "settings/**/*.scss";
 @import "tools/**/*.scss";
 @import "base/**/*.scss";
-@import "bits/**/*.scss";
-@import "pieces/**/*.scss";
+@import "layout/**/*.scss";
+@import "components/**/*.scss";
