--- a/assets/css/patterns.css
+++ b/assets/css/patterns.css
@@ -74,11 +74,95 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   margin: 0; }
 
-.l-container {
-  width: 100%;
-  max-width: 1200px;
+.p-colour-list {
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(4, 1fr); }
+
+.p-colour {
+  padding-bottom: 25%; }
+
+.p-colour--text {
+  background-color: #000; }
+
+.p-colour--theme {
+  background-color: #008d6f; }
+
+.p-footer {
+  font-size: 12px;
+  font-size: 0.75rem;
+  margin-top: 10rem;
+  padding-bottom: 1rem;
+  text-align: center; }
+
+.p-header {
+  background-color: #2c97a8;
+  color: white;
+  margin-bottom: 2rem; }
+  .p-header .p-container {
+    align-items: center;
+    display: flex;
+    height: 80px;
+    justify-content: space-between; }
+
+.p-title {
+  font-size: 16px;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.p-container {
   margin: 0 auto;
+  max-width: 1600px;
   padding: 0 1rem; }
+  @media screen and (min-width: 1200px) {
+    .p-container {
+      padding: 0 2rem; } }
+
+.p-section + .p-section {
+  border-top: dashed 1px #A2ADB9;
+  margin-top: 5rem;
+  padding-top: 5rem; }
+
+.p-section__header {
+  background: #f2f4f6;
+  margin-bottom: 2rem;
+  padding: 1rem 2rem; }
+
+.p-section__title {
+  font-size: 28px;
+  font-size: 1.75rem; }
+
+.p-section__body {
+  background: white; }
+
+.p-section__subsection + .p-section__subsection {
+  border-top: solid 1px #f2f4f6;
+  margin-top: 2rem;
+  padding-top: 2rem; }
+
+.p-section__subtitle {
+  font-size: 14px;
+  font-size: 0.875rem;
+  margin-bottom: .5rem;
+  opacity: .5;
+  text-transform: uppercase; }
+
+.p-type--xl {
+  font-size: 43px;
+  font-size: 2.6875rem;
+  font-weight: bold;
+  line-height: 1.2; }
+
+.p-type--l {
+  font-size: 32px;
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.1875; }
+
+.p-type--s {
+  font-size: 12px;
+  font-size: 0.75rem; }
 
 .c-btn {
   font-size: 14px;
