--- a/perch/templates/navigation/item.html
+++ b/perch/templates/navigation/item.html
@@ -1,10 +1,13 @@
 <perch:before>
-    <ul>
+  <ul class="c-site-nav">
 </perch:before>
-		<li<perch:if exists="current_page"> class="selected"</perch:if><perch:if exists="ancestor_page"> class="ancestor"</perch:if>>
-            <a href="<perch:pages id="pagePath" />"><perch:pages id="pageNavText" /></a>   
-            <perch:pages id="subitems" encode="false" />
-        </li>
+  <li class="c-site-nav__item <perch:if exists="current_page">is-active</perch:if>">
+    <a href="<perch:pages id="pagePath" />" class="c-site-nav__link"><perch:pages id="pageNavText" /></a>
+    <perch:pages id="subitems" encode="false" />
+  </li>
 <perch:after>
-    </ul>
-</perch:after>
+    <li class="c-site-nav__item c-site-nav__item--btn">
+      <a href="#contact" class="c-site-nav__link c-btn c-btn--theme">Contact</a>
+    </li>
+  </ul>
+</perch:after
