new way of working

--- a/perch/templates/content/forms/enrol.html
+++ b/perch/templates/content/forms/enrol.html
@@ -1,5 +1,5 @@
 <perch:form id="contact" method="post" app="perch_forms" class="p-form">
-  <div class="p-form-body">
+  <div class="c-wysiwyg p-form-body">
     <perch:content id="intro" type="textarea" label="Intro" markdown editor="simplemde" size="s"></perch:content> 
   </div>
 
@@ -40,7 +40,7 @@
   </p>
 
   <perch:success>
-    <div class="p-form-body is-success">
+    <div class="c-wysiwyg p-form-body is-success">
       <perch:content id="success" type="textarea" label="Thank You Message" markdown editor="simplemde" size="s"></perch:content>
     </div>
   </perch:success>
