--- a/perch/templates/content/common/tick-list.html
+++ b/perch/templates/content/common/tick-list.html
@@ -1,8 +1,16 @@
 <perch:repeater id="ticks" label="Tick List">
   <perch:before>
-      <ul class="p-tick-list">
+      <ul class="c-icon-list">
   </perch:before>
-    <li><perch:content id="label" label="Text" type="text" /></li>
+    <li class="c-icon-list__item">
+      <svg id="icon-check" viewBox="0 0 48 48" class="c-icon-list__icon c-icon-list__icon--tick">
+        <title>tick</title>
+        <path d="M18 32.344l21.188-21.188 2.813 2.813-24 24-11.156-11.156 2.813-2.813z"></path>
+      </svg>
+      <span class="c-icon-list__label">
+        <perch:content id="label" label="Text" type="text" />
+      </span>
+    </li>
     <perch:after>
       </ul>
   </perch:after>
