--- a/perch/templates/content/page/header.html
+++ b/perch/templates/content/page/header.html
@@ -1,15 +1,18 @@
-<section class="l-page-header d-page-header">
+<section class="l-page-header p-page-header">
   <div class="l-container l-container--medium">
     <div class="l-page-header__inner">
       <div class="l-page-header__body">
-        <h1 class="d-page-header__title">
+        <h1 class="p-page-header__title">
           <perch:content id="title" label="Title" type="text" />
         </h1>
-        <div class="d-page-header__intro">
+        <div class="p-page-header__intro">
           <perch:content id="text" type="textarea" label="Text" markdown editor="simplemde" />
         </div>
         <perch:template path="/content/common/tick-list.html" />
         <perch:template path="/content/common/button.html" />
+      </div>
+      <div class="l-page-header__img">
+        <perch:template path="/content/common/image--svg.html" />
       </div>
     </div>
   </div>
