--- a/_dev/styles/tokens/components/_buttons.scss
+++ b/_dev/styles/tokens/components/_buttons.scss
@@ -3,3 +3,9 @@
 :root {
   //--color-button-bg :var(--color-primary);
 }
+
+.c-btn {
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
