--- a/_dev/styles/tokens/components/_form.scss
+++ b/_dev/styles/tokens/components/_form.scss
@@ -1,8 +1,8 @@
 :root {
-  // --form-label-color: var(--color-text);
-  // --form-label-size: var(--base-font-size);
-  // --form-label-weight: var(--base-font-weight);
-  // --form-label-margin: var(--space--xs);
+  //--form-label-color: var(--color-text);
+  --form-label-size: 14px;
+  --form-label-weight: 400;
+  --form-label-margin: var(--space--s);
 
   // --form-bg-color:  var(--color-body);
   // --form-border-color: var(--border-color);
