--- a/_dev/styles/components/_icon-list.scss
+++ b/_dev/styles/components/_icon-list.scss
@@ -11,6 +11,10 @@
   }
 }
 
+  body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
+    margin-top: 0;
+  }
+
 // optional
 .c-icon-list__link {
 
