--- a/_dev/styles/components/_nav.scss
+++ b/_dev/styles/components/_nav.scss
@@ -86,6 +86,7 @@
     color: var(--nav-link--btn__color);
     font-size: var(--nav-link--btn__size);
     font-weight: var(--nav-link--btn__weight);
+    letter-spacing: 1px;
     margin-left: var(--nav-item__margin);
     padding: var(--nav-link--btn__v-padding) var(--nav-link--btn__h-padding);
     text-transform: var(--nav-link--btn__transform);
