--- a/_dev/styles/tokens/global/_layout.scss
+++ b/_dev/styles/tokens/global/_layout.scss
@@ -13,3 +13,6 @@ $container--small     : 932px;
   --container--l  :   1600px;
   --container--s  :   900px;
 }
+
+$bp--nav  : 1024px;
+$bp--small : 600px;
