--- a/_dev/styles/components/_nav.scss
+++ b/_dev/styles/components/_nav.scss
@@ -32,35 +32,59 @@
 .c-nav {
   align-items: center;
   display: flex;
+
+  @include mq($bp--nav, max) {
+    align-items: stretch;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    padding: var(--space--m);
+  }
 }
 
 .c-nav__item {
   position: relative;
 
-  + .c-nav__item {
-    margin-left: var(--nav-item__margin);
+  @include mq($bp--nav) {
+    + .c-nav__item {
+      margin-left: var(--nav-item__margin);
+    }
+  }
+
+  @include mq($bp--nav, max) {
+    display: block;
+
+    &:not(:last-child) {
+      border-bottom: solid 1px var(--color-border);
+      margin-bottom: var(--space--s);
+      padding-bottom: var(--space--m);
+      width: 100%;
+    }
   }
 }
 
   .c-nav__item.has-sub-nav {
-    align-items: center;
     display: flex;
     flex-direction: column;
 
-    &:after {
-      content: '';
-      left: 0;
-      top: 30px;
-      display: block;
-      height: 20px;
-      width: 100%;
-      position: absolute;
-    }
+    @include mq($bp--nav) {
+      align-items: center;
 
-    &:hover {
-      .c-sub-nav {
+      &:after {
+        content: '';
+        left: 0;
+        top: 30px;
         display: block;
-        opacity: 1;
+        height: 20px;
+        width: 100%;
+        position: absolute;
+      }
+  
+      &:hover {
+        .c-sub-nav {
+          display: block;
+          opacity: 1;
+        }
       }
     }
   }
@@ -106,52 +130,66 @@
       border-color: var(--nav-link--btn--hover__border-color);
       color: var(--nav-link--btn--hover__color) !important;
     }
+
+    @include mq($bp--nav, max) {
+      display: block;
+      margin-left: 0;
+      margin-top: 32px;
+      text-align: center;
+      width: 100%;
+    }
   }
 
 
   .c-sub-nav {
-    background: white;
-    border: solid 1px rgba(black, 0.2);
-    border-radius: 5px;
-    //box-shadow: 0 0 18px rgba(black, 0.2);
-    display: none;
     font-size: var(--nav-link__size);
-    opacity: 0;
-    padding: var(--space--l);
-    position: absolute;
-    top: 3em;
     transition: opacity 0.5s ease-in-out;
     transition-delay: 2s;
-    width: auto;
 
-    &:before {
-      display: block;
+    @include mq($bp--nav) {
+      background: white;
+      border: solid 1px rgba(black, 0.2);
+      border-radius: 5px;
+      display: none;
+      opacity: 0;
+      padding: var(--space--l);
       position: absolute;
-      top: -15px;
-      left: 50%;
-      margin-left: -15px;
-      content: '';
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 0 15px 15px 15px;
-      border-color: transparent transparent white;
-      z-index: 1;
+      top: 3em;
+      width: auto;
+
+      &:before {
+        display: block;
+        position: absolute;
+        top: -15px;
+        left: 50%;
+        margin-left: -15px;
+        content: '';
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 15px 15px 15px;
+        border-color: transparent transparent white;
+        z-index: 1;
+      }
+  
+      &:after {
+        display: block;
+        position: absolute;
+        top: -16px;
+        left: 50%;
+        margin-left: -16px;
+        content: '';
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 16px 16px 16px;
+        border-color: transparent transparent rgba(black, 0.2);
+        z-index: 0;
+      }
     }
-
-    &:after {
-      display: block;
-      position: absolute;
-      top: -16px;
-      left: 50%;
-      margin-left: -16px;
-      content: '';
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 0 16px 16px 16px;
-      border-color: transparent transparent rgba(black, 0.2);
-      z-index: 0;
+    
+    @include mq($bp--nav, max) {
+      padding-left: var(--space--m);
     }
   }
 
