--- a/_dev/styles/tokens/global/_layout.scss
+++ b/_dev/styles/tokens/global/_layout.scss
@@ -14,5 +14,7 @@ $container--small     : 932px;
   --container--s  :   900px;
 }
 
+$bp--max  : 1200px;
 $bp--nav  : 1024px;
 $bp--small : 600px;
+$bp--medium: 768px;
