--- a/perch/templates/content/learning/benefits.html
+++ b/perch/templates/content/learning/benefits.html
@@ -1,7 +1,7 @@
-<div class="l-flex-split__inner">
+<div class="l-flex-split__inner l-md-order-2">
   <perch:template path="/content/common/image--svg.html" />
 </div>
 
-<div class="l-flex-split__inner p-course-benefits">
+<div class="l-flex-split__inner l-md-order-1 p-course-benefits">
   <perch:template path="/content/common/icon-list.html" />
 </div>
