--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -651,6 +651,11 @@ sans-serif;
   --font--s-size:    1.2rem;
   --font--s-weight:    var(--base-font-weight);
   --font--s-lh:    var(--base-line-height); }
+  @media screen and (max-width: 599px) {
+    :root {
+      --font--xxl-size: 3.2rem;
+      --font--xl-size: 2.2rem;
+      --font--l-size: 1.8rem; } }
 
 .c-btn {
   font-weight: bold;
@@ -1097,6 +1102,29 @@ body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
     fill: white;
     width: 22px; }
 
+@media screen and (max-width: 767px) {
+  .p-course-benefits {
+    margin-bottom: 48px;
+    margin-bottom: var(--space--xl);
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .p-course-benefits-decoration {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-top: 0; } }
+
+@media screen and (max-width: 399px) {
+  .p-course-benefits .c-icon-list__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .p-course-benefits .c-icon-list__icon {
+    margin-bottom: 16px;
+    margin-bottom: var(--space--m); } }
+
 .p-course-detail .c-card__header {
   border-bottom: solid 1px #eee;
   border-bottom: solid 1px var(--color-border);
@@ -1113,14 +1141,21 @@ body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
   line-height: 1.5;
   line-height: var(--font--l-lh); }
 
+.p-form {
+  padding: 32px;
+  padding: var(--space--l); }
+  @media screen and (min-width: 1200px) {
+    .p-form {
+      padding: 48px;
+      padding: var(--space--xl); } }
+
 .p-page-header__title {
   font-size: 4.3rem;
   font-size: var(--font--xxl-size);
   font-weight: 700;
   font-weight: var(--font--xxl-weight);
   line-height: 1.2;
-  line-height: var(--font--xxl-lh);
-  orphans: 2; }
+  line-height: var(--font--xxl-lh); }
 
 .p-page-header__intro {
   font-size: 2.2rem;
@@ -1175,21 +1210,55 @@ body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
 .l-container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem; }
+  padding-left: 32px;
+  padding-left: var(--space--l);
+  padding-right: 32px;
+  padding-right: var(--space--l); }
+  @media screen and (min-width: 768px) {
+    .l-container {
+      padding-left: 16px;
+      padding-left: var(--space--m);
+      padding-right: 16px;
+      padding-right: var(--space--m); } }
 
 .l-container--large {
   max-width: 1600px; }
 
 .l-container--medium {
   max-width: 1232px; }
+  @media screen and (max-width: 1263px) {
+    .l-container--medium {
+      padding-left: 48px;
+      padding-left: var(--space--xl);
+      padding-right: 48px;
+      padding-right: var(--space--xl); } }
+  @media screen and (max-width: 599px) {
+    .l-container--medium {
+      padding-left: 32px;
+      padding-left: var(--space--l);
+      padding-right: 32px;
+      padding-right: var(--space--l); } }
 
 .l-container--small {
   max-width: 932px; }
+  @media screen and (max-width: 963px) {
+    .l-container--small {
+      padding-left: 80px;
+      padding-left: var(--space--xxl);
+      padding-right: 80px;
+      padding-right: var(--space--xxl); } }
+  @media screen and (max-width: 599px) {
+    .l-container--small {
+      padding-left: 48px;
+      padding-left: var(--space--xl);
+      padding-right: 48px;
+      padding-right: var(--space--xl); } }
 
 section + section {
   margin-top: 80px;
-  padding-top: 80px; }
+  margin-top: var(--space--xxl);
+  padding-top: 80px;
+  padding-top: var(--space--xxl); }
 
 .l-footer {
   margin-top: 160px;
@@ -1201,79 +1270,39 @@ section + section {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
 
-.l-footer__info {
-  width: 30%; }
-
+.l-footer__info,
 .l-footer__form {
-  width: 45%; }
+  width: 100%; }
 
-.l-hero {
-  padding-top: 160px; }
+@media screen and (min-width: 768px) {
+  .l-footer__info {
+    width: 40%; }
+  .l-footer__form {
+    width: 50%; } }
 
-.l-hero__inner {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
+@media screen and (min-width: 1200px) {
+  .l-footer__info {
+    width: 30%; }
+  .l-footer__form {
+    width: 45%; } }
 
-.l-hero__body {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  width: 40%; }
-  .l-hero__body .c-btn {
-    margin-top: 2rem; }
-
-.l-hero__image {
-  width: 60%; }
-
-.l-split-container {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
-
-.l-split-item {
-  width: 44%; }
-
-.l-split:nth-child(even) .l-split-item__body {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1; }
-
-.l-split:nth-child(even) .l-split-item__img {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-.l-split:nth-child(odd) .l-split-item__body {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2; }
-
-.l-split:nth-child(odd) .l-split-item__img {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1; }
+@media screen and (max-width: 767px) {
+  .l-footer__form {
+    margin-top: 48px;
+    margin-top: var(--space--xl); } }
 
 .l-page-header {
   padding-top: 240px; }
+  @media screen and (max-width: 767px) {
+    .l-page-header {
+      padding-top: 160px; } }
+  .l-page-header svg {
+    height: auto;
+    width: 100%; }
 
 .home .l-page-header {
   padding-top: 160px; }
@@ -1287,19 +1316,34 @@ section + section {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
 
-.l-page-header__body {
-  width: 50%; }
-
+.l-page-header__body,
 .l-page-header__img {
-  width: 35%; }
+  width: 100%; }
 
-.home .l-page-header__body {
-  width: 40%; }
+@media screen and (min-width: 768px) {
+  .l-page-header__body {
+    width: 50%; }
+  .l-page-header__img {
+    width: 35%; }
+  .home .l-page-header__body {
+    width: 50%; }
+  .home .l-page-header__img {
+    width: 45%; } }
 
-.home .l-page-header__img {
-  width: 60%; }
+@media screen and (min-width: 1200px) {
+  .home .l-page-header__body {
+    width: 40%; }
+  .home .l-page-header__img {
+    width: 60%; } }
+
+@media screen and (max-width: 767px) {
+  .l-page-header__img {
+    margin-top: 48px;
+    margin-top: var(--space--xl); } }
 
 .l-flex-split {
   display: -webkit-box;
@@ -1308,14 +1352,75 @@ section + section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  @media screen and (max-width: 767px) {
+    .l-flex-split {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
-.l-flex-split--center {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+@media screen and (min-width: 768px) {
+  .l-flex-split--center {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; } }
 
-.l-flex-split--small .l-flex-split__inner {
-  width: 44%; }
+@media screen and (min-width: 768px) {
+  .l-flex-split--small .l-flex-split__inner {
+    -ms-flex-preferred-size: 44%;
+        flex-basis: 44%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    width: 44%; } }
+
+@media screen and (max-width: 767px) {
+  .l-md-order-1 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .l-md-order-2 {
+    margin-top: 48px;
+    margin-top: var(--space--xl);
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; } }
+
+.l-flex-split svg {
+  height: auto;
+  width: 100%; }
+
+@media screen and (min-width: 768px) {
+  .l-split-alternate:nth-child(even) .l-split-item__body {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .l-split-alternate:nth-child(even) .l-split-item__img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .l-split-alternate:nth-child(odd) .l-split-item__body {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .l-split-alternate:nth-child(odd) .l-split-item__img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; } }
+
+@media screen and (max-width: 767px) {
+  .l-split-item__body {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .l-split-item__img {
+    margin-bottom: 48px;
+    margin-bottom: var(--space--xl);
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; } }
 
 body.home:before {
   background-image: url("/assets/img/bg.svg");
