--- a/perch/templates/pages/attributes/twitter.html
+++ b/perch/templates/pages/attributes/twitter.html
@@ -1,7 +1,7 @@
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="">
-<meta name="twitter:title" content="<perch:pages id="og_title" label="Social title" type="text" escape help="Title for this document with no branding or site name">">
-<meta name="twitter:description" content="<perch:pages id="og_description" label="Social description" type="textarea" size="s" escape>">
+<meta name="twitter:site" content="<perch:pages id="sitename" type="hidden">">
+<meta name="twitter:title" content="<perch:pages id="title" />">
+<meta name="twitter:description" content="<perch:pages id="description" />">
 <perch:if exists="og_image">
 <meta property="twitter:image" content="<perch:pages id="domain" type="hidden"><perch:pages id="og_image" label="Image when shared" help="Should be at least 1200x630" type="image" width="1200">">
 </perch:if>
