--- a/perch/templates/pages/attributes/facebook.html
+++ b/perch/templates/pages/attributes/facebook.html
@@ -1,6 +1,6 @@
 <meta property="og:site_name" content="<perch:pages id="sitename" type="hidden">">
 <meta property="og:url" content="<perch:pages id="url" type="hidden">">
-<meta property="og:title" content="<perch:pages id="title" label="Social title" />">
+<meta property="og:title" content="<perch:pages id="pagetitle" label="Social title" />">
 <meta property="og:description" content="<perch:pages id="description" />">
 <perch:if exists="og_image">
 <meta property="og:image" content="<perch:pages id="domain" type="hidden"><perch:pages id="og_image" label="Image when shared" help="Should be at least 1200x630" type="image" width="1200">">
