--- a/perch/templates/pages/attributes/twitter.html
+++ b/perch/templates/pages/attributes/twitter.html
@@ -1,6 +1,6 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="<perch:pages id="sitename" type="hidden">">
-<meta name="twitter:title" content="<perch:pages id="pagetitle" />">
+<meta name="twitter:title" content="<perch:pages id="pageTitle" />">
 <meta name="twitter:description" content="<perch:pages id="description" />">
 <perch:if exists="og_image">
 <meta property="twitter:image" content="<perch:pages id="domain" type="hidden"><perch:pages id="og_image" label="Image when shared" help="Should be at least 1200x630" type="image" width="1200">">
