--- a/perch/templates/content/forms/enrol.html
+++ b/perch/templates/content/forms/enrol.html
@@ -5,29 +5,65 @@
 
   <p class="p-form-field">
     <perch:label for="name" class="c-label">Name</perch:label>
-    <perch:input type="text" id="name" required label="Name" class="c-input">
+    <perch:input type="text" id="name" required label="Name" class="c-input" required>
     <perch:error for="name" type="required">Please add your name</perch:error>
   </p>
 
   <p class="p-form-field">
     <perch:label for="email" class="c-label">Email Address</perch:label>
-    <perch:input type="text" id="email" required label="email" class="c-input">
+    <perch:input type="text" id="email" required label="email" class="c-input" required>
     <perch:error for="email" type="required">Please add your email address</perch:error>
   </p>
 
   <p class="p-form-field">
     <perch:label for="location" class="c-label">Your Location</perch:label>
-    <perch:input type="select" id="name" label="Name" class="c-select" options="Spain, Poland, Italy, China">
+    <perch:input type="select" id="location" placeholder="Please Select" label="Location" class="c-select" allowempty="true" required options="Afghanistan,Albania,Algeria,American Samoa,Andorra,Angola,Anguilla,Antarctica,Antigua And Barbuda,Argentina,Armenia,Aruba,Australia,
+    Austria,Azerbaijan,Bahamas,Bahrain,Bangladesh,Barbados,Belarus,Belgium,Belize,Benin,Bermuda,Bhutan,Bolivia,Bosnia And Herzegovina,
+    Botswana,Bouvet Island,Brazil,British Indian Ocean Territory,Brunei Darussalam,Bulgaria,Burkina Faso,Burundi,Cambodia,Cameroon,Canada,Cape
+    Verde,Cayman Islands,Central African Republic,Chad,Chile,China,Christmas Island,Cocos (keeling) Islands,Colombia,Comoros,Congo,Congo,The
+    Democratic Republic Of The,Cook Islands,Costa Rica,Cote D'ivoire,Croatia,Cuba,Cyprus,Czech Republic,Denmark,Djibouti,Dominica,Dominican
+    Republic,East Timor,Ecuador,Egypt,El Salvador,Equatorial Guinea,Eritrea,Estonia,Ethiopia,Falkland Islands (malvinas),Faroe Islands,Fiji,
+    Finland,France,French Guiana,French Polynesia,French Southern Territories,Gabon,Gambia,Georgia,Germany,Ghana,Gibraltar,Greece,Greenland,
+    Grenada,Guadeloupe,Guam,Guatemala,Guinea,Guinea-bissau,Guyana,Haiti,Heard Island And Mcdonald Islands,Holy See (vatican City State),
+    Honduras,Hong Kong,Hungary,Iceland,India,Indonesia,Iran,Islamic Republic Of,Iraq,Ireland,Israel,Italy,Jamaica,Japan,Jordan,Kazakstan,
+    Kenya,Kiribati,Korea,Democratic People's Republic Of,Korea,Republic Of,Kosovo,Kuwait,Kyrgyzstan,Lao People's Democratic Republic,Latvia,
+    Lebanon,Lesotho,Liberia,Libyan Arab Jamahiriya,Liechtenstein,Lithuania,Luxembourg,Macau,Macedonia,The Former Yugoslav Republic Of,
+    Madagascar,Malawi,Malaysia,Maldives,Mali,Malta,Marshall Islands,Martinique,Mauritania,Mauritius,Mayotte,Mexico,Micronesia,Federated
+    States Of,Moldova,Republic Of,Monaco,Mongolia,Montserrat,Montenegro,Morocco,Mozambique,Myanmar,Namibia,Nauru,Nepal,Netherlands,
+    Netherlands Antilles,New Caledonia,New Zealand,Nicaragua,Niger,Nigeria,Niue,Norfolk Island,Northern Mariana Islands,Norway,Oman,Pakistan,
+    Palau,Palestinian Territory,Occupied,Panama,Papua New Guinea,Paraguay,Peru,Philippines,Pitcairn,Poland,Portugal,Puerto Rico,Qatar,
+    Reunion,Romania,Russian Federation,Rwanda,Saint Helena,Saint Kitts And Nevis,Saint Lucia,Saint Pierre And Miquelon,Saint Vincent And The
+    Grenadines,Samoa,San Marino,Sao Tome And Principe,Saudi Arabia,Senegal,Serbia,Seychelles,Sierra Leone,Singapore,Slovakia,Slovenia,Solomon
+    Islands,Somalia,South Africa,South Georgia And The South Sandwich Islands,Spain,Sri Lanka,Sudan,Suriname,Svalbard And Jan Mayen,Swaziland,
+    Sweden,Switzerland,Syrian Arab Republic,Taiwan,Province Of China,Tajikistan,Tanzania,United Republic Of,Thailand,Togo,Tokelau,Tonga,
+    Trinidad And Tobago,Tunisia,Turkey,Turkmenistan,Turks And Caicos Islands,Tuvalu,Uganda,Ukraine,United Arab Emirates,United Kingdom,United
+    States,United States Minor Outlying Islands,Uruguay,Uzbekistan,Vanuatu,Venezuela,Viet Nam,Virgin Islands,British,Virgin Islands,U.s.,
+    Wallis And Futuna,Western Sahara,Yemen,Zambia,Zimbabwe" />
+  </p>
+
+  <p class="p-form-field">
+    <perch:label for="level" class="c-label">Your Language Level</perch:label>
+    <perch:input type="select" id="level" label="Langauge Level" class="c-select" allowempty="true" placeholder="Please Select"  options="Beginner, A1 Elementary, A2 Pre-intermediate, B1 Intermediate, B2 Upper-immediate, C1 Advanced, C2 Proficiency" />
+  </p>
+
+  <p class="p-form-field">
+    <perch:label for="age" class="c-label">Your age</perch:label>
+    <perch:input type="select" id="age" label="Age" class="c-select" allowempty="true" placeholder="Please Select"  options="15 years or younger, 16 years, 17 years, 18 years or older" />
+  </p>
+
+  <p class="p-form-field">
+    <perch:label for="language" class="c-label">Your first language?</perch:label>
+    <perch:input type="text" id="language" label="First Language" class="c-input" />
   </p>
 
   <p class="p-form-field">
     <perch:label for="interest" class="c-label">Interested in</perch:label>
-    <perch:input type="select" id="interest" label="Interested in" class="c-select" options="General English, Business English, Local Tour" />
+    <perch:input type="select" id="interest" label="Interested in" class="c-select" allowempty="true" placeholder="Please Select"  options="General English, English for Life and Work, Academic English, Exam Preparation, Business English, Seasonal Schools, One to One, Small Groups, Local Tour, Grand Tour" />
   </p>
 
   <p class="p-form-field">
-    <perch:label for="notes" class="c-label">Notes</perch:label>
-    <perch:input type="textarea" id="notes" label="Notes" class="c-textarea" />
+    <perch:label for="why" class="c-label">Why do you want to improve your English?</perch:label>
+    <perch:input type="textarea" id="why" label="Why English?" class="c-textarea" />
   </p>
 
   <p class="p-form-field is-special">
