form text amends

--- a/perch/templates/content/forms/enrol.html
+++ b/perch/templates/content/forms/enrol.html
@@ -52,13 +52,13 @@
   </p>
 
   <p class="p-form-field">
-    <perch:label for="language" class="c-label">Your first language?</perch:label>
+    <perch:label for="language" class="c-label">Your first language</perch:label>
     <perch:input type="text" id="language" label="First Language" class="c-input" />
   </p>
 
   <p class="p-form-field">
     <perch:label for="interest" class="c-label">Interested in</perch:label>
-    <perch:input type="select" id="interest" label="Interested in" class="c-select" allowempty="true" placeholder="Please Select"  options="General English, English for Life and Work, Academic English, Exam Preparation, Business English, Seasonal Schools, One to One, Small Groups, Local Tour, Grand Tour" />
+    <perch:input type="select" id="interest" label="Interested in" class="c-select" allowempty="true" placeholder="Please Select"  options="General English, Business English, Academic English, Working Living Learning, Exam Preparation, Summer School, Winter School, Spring School, York Tour, Grand Tour" />
   </p>
 
   <p class="p-form-field">
