--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -923,6 +923,14 @@ sans-serif;
   line-height: 1.5;
   line-height: var(--font--m-lh); }
 
+.c-icon-list--row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-item: center; }
+  .c-icon-list--row .c-icon-list__item + .c-icon-list__item {
+    margin-top: 0; }
+
 .c-icon-list__item {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1446,13 +1454,14 @@ body.home:before {
   font-weight: var(--font--s-weight);
   line-height: 1.5;
   line-height: var(--font--s-lh);
-  margin-top: 48px;
-  margin-top: var(--space--xl);
-  text-align: center; }
+  background-color: #C7D1C8;
+  padding-bottom: 32px;
+  padding-bottom: var(--space--l);
+  padding-top: 32px;
+  padding-top: var(--space--l); }
 
 .d-footer__contact {
-  border-top: solid 1px #eee;
-  border-top: solid 1px var(--color-border);
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
   margin-top: 32px;
   margin-top: var(--space--l);
   padding-top: 32px;
