--- a/perch/templates/content/learning/benefits.html
+++ b/perch/templates/content/learning/benefits.html
@@ -1,4 +1,4 @@
-<div class="l-flex-split__inner l-md-order-2">
+<div class="l-flex-split__inner l-md-order-2 p-course-benefits__img">
   <perch:template path="/content/common/image--svg.html" />
 </div>
 
