--- a/_dev/styles/decoration/_footer.scss
+++ b/_dev/styles/decoration/_footer.scss
@@ -2,6 +2,12 @@
   background-color: $color-theme--light;
 }
 
+.d-footer .c-wysiwyg {
+  h3 + p {
+    margin-top: var(--space--l);
+  }
+}
+
 .d-footer__copy {
   @include font(s);
   background-color: #C7D1C8;
