--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1455,6 +1455,10 @@ body.home:before {
 .d-footer {
   background-color: #DDE9DF; }
 
+.d-footer .c-wysiwyg h3 + p {
+  margin-top: 32px;
+  margin-top: var(--space--l); }
+
 .d-footer__copy {
   font-size: 1.2rem;
   font-size: var(--font--s-size);
