--- a/_dev/styles/decoration/_footer.scss
+++ b/_dev/styles/decoration/_footer.scss
@@ -2,9 +2,9 @@
   background-color: $color-theme--light;
 }
 
-.d-footer .c-wysiwyg {
-  h3 + p {
-    margin-top: var(--space--l);
+.d-footer .c-wysiwyg{
+  h3  {
+    margin-bottom: var(--space--l);
   }
 }
 
