added learning methods to learning page

--- a/_dev/styles/patterns/index.scss
+++ b/_dev/styles/patterns/index.scss
@@ -2,5 +2,6 @@
 @import "benefits";
 @import "course-detail";
 @import "form";
+@import "learning-methods";
 @import "page-header";
 @import "services";
