--- a/_dev/styles/components/_icon-list.scss
+++ b/_dev/styles/components/_icon-list.scss
@@ -33,6 +33,8 @@
   flex-basis: 32px;
   flex-grow: 0;
   flex-shrink: 0;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 
   .c-icon-list__icon--tick {
