--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -953,7 +953,9 @@ body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
       -ms-flex-positive: 0;
           flex-grow: 0;
   -ms-flex-negative: 0;
-      flex-shrink: 0; }
+      flex-shrink: 0;
+  margin-left: 0 !important;
+  margin-right: 0 !important; }
 
 .c-icon-list__icon--tick {
   fill: #008d6f;
@@ -1160,6 +1162,46 @@ body.home .p-page-header .c-icon-list__item + .c-icon-list__item {
     .p-form {
       padding: 48px;
       padding: var(--space--xl); } }
+
+.p-learning-methods {
+  border-top: solid 1px #eee;
+  border-top: solid 1px var(--color-border);
+  padding-top: 80px;
+  padding-top: var(--space--xxl); }
+
+.p-learning-methods__title {
+  font-size: 2.2rem;
+  font-size: var(--font--l-size);
+  font-weight: 400;
+  font-weight: var(--font--l-weight);
+  line-height: 1.5;
+  line-height: var(--font--l-lh);
+  margin-bottom: 48px;
+  margin-bottom: var(--space--xl);
+  text-align: center; }
+
+@media screen and (max-width: 767px) {
+  .p-learning-method + .p-learning-method {
+    margin-top: 32px;
+    margin-top: var(--space--l); } }
+
+.p-learning-method__title {
+  font-size: 2.2rem;
+  font-size: var(--font--l-size);
+  font-weight: 400;
+  font-weight: var(--font--l-weight);
+  line-height: 1.5;
+  line-height: var(--font--l-lh);
+  margin-bottom: 16px;
+  margin-bottom: var(--space--m); }
+
+.p-learning-method .c-icon-list__item + .c-icon-list__item {
+  border-top: solid 1px #eee;
+  border-top: solid 1px var(--color-border);
+  margin-top: 8px;
+  margin-top: var(--space--s);
+  padding-top: 8px;
+  padding-top: var(--space--s); }
 
 .p-page-header__title {
   font-size: 4.3rem;
