--- a/perch/templates/content/forms/enrol.html
+++ b/perch/templates/content/forms/enrol.html
@@ -53,7 +53,7 @@
 
   <p class="p-form-field">
     <perch:label for="interest" class="c-label">Interested in</perch:label>
-    <perch:input type="select" id="interest" label="Interested in" class="c-select" allowempty="true" placeholder="Please Select"  options="General English, Business English, Academic English, Working Living Learning, Exam Preparation, Summer School, Winter School, Spring School, York Tour, Grand Tour" />
+    <perch:input type="select" id="interest" label="Interested in" class="c-select" allowempty="true" placeholder="Please Select"  options="General English, Business English, Academic English, Working Living Learning, Exam Preparation, Winter Tour, Spring Tour, Summer Tour, Grand Tour" />
   </p>
 
   <p class="p-form-field">
