spelling error on form

--- a/perch/templates/content/forms/enrol.html
+++ b/perch/templates/content/forms/enrol.html
@@ -38,7 +38,7 @@
 
   <p class="p-form-field">
     <perch:label for="level" class="c-label">Your Language Level</perch:label>
-    <perch:input type="select" id="level" label="Langauge Level" class="c-select" allowempty="true" placeholder="Please Select"  options="Beginner, A1 Elementary, A2 Pre-intermediate, B1 Intermediate, B2 Upper-immediate, C1 Advanced, C2 Proficiency" />
+    <perch:input type="select" id="level" label="Language Level" class="c-select" allowempty="true" placeholder="Please Select"  options="Beginner, A1 Elementary, A2 Pre-intermediate, B1 Intermediate, B2 Upper-immediate, C1 Advanced, C2 Proficiency" />
   </p>
 
   <p class="p-form-field">
